--- a/app/views/portfolio/sites/show.html.erb
+++ b/app/views/portfolio/sites/show.html.erb
@@ -2,7 +2,7 @@
   <%= content_for :title, @site.person_name %>
   <%= content_for :container_class, 'container_wide portfolio_site' %>
 
-  <%= render 'header_menu' %>
+  <%= render 'portfolio/shared/header_menu' %>
 
   <%= image_tag @site.avatar.url(:thumb), class: :pf_avatar if @site.avatar.file? %>
 
@@ -12,7 +12,7 @@
     <%= raw render_markdown @site.summary %>
   </div>
 
-  <%= render 'portfolio/site_projects/list', item: @site if @site.site_items.any? %>
+  <%= render 'portfolio/site_projects/list', site: @site if @site.site_items.any? %>
 
   <div class="pf_contact">
     <%= link_to 'Email me', "mailto:#{@site.email}", target: :_blank, class: 'btn btn-default' %>
