--- a/app/views/portfolio/site_projects/show.html.erb
+++ b/app/views/portfolio/site_projects/show.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :title, "#{@item.title} | #{@site.person_name}" %>
 <%= content_for :container_class, 'portfolio_site_item' %>
 
 <%= render 'portfolio/shared/header' %>
