--- a/app/views/portfolio/admin/site_items/_form.html.erb
+++ b/app/views/portfolio/admin/site_items/_form.html.erb
@@ -2,23 +2,32 @@
   <%= render 'portfolio/shared/form_errors', record: @item %>
 
   <div class="row">
-    <div class="col-xs-6">
+    <div class="col-xs-5">
       <div class="form-group">
-        <%= f.label :title %><br>
+        <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control' %>
       </div>
-      
     </div>
-    <div class="col-xs-6">
+    
+    <div class="col-xs-4">
       <div class="form-group">
-        <%= f.label :url %><br>
+        <%= f.label :url %>
         <%= f.text_field :url, class: 'form-control'%>
+      </div>
+    </div>
+    
+    <div class="col-xs-3">
+      <div class="form-group">
+        <%= f.label :site_item_category_id %>
+        <%= f.select :site_item_category_id, 
+            Portfolio::SiteItemCategory.all.map { |c| [c.name, c.id] },
+            {}, class: 'form-control'%>
       </div>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :body %><br>
+    <%= f.label :body %>
     <%= f.text_area :body, class: 'form-control pf_text_area' %>
   </div>
   <div class="actions">
