display categories in projects + added featured feat

--- a/app/assets/stylesheets/portfolio/site_projects.scss
+++ b/app/assets/stylesheets/portfolio/site_projects.scss
@@ -2,6 +2,10 @@
   max-width: 800px;
   margin-bottom: 50px;
 
+  h2 {
+    text-align: center;
+  }
+  
   .project_container {
     border: 1px solid lightgrey;
     padding: 10px;
