small refactor to categories

--- a/app/views/portfolio/admin/site_item_categories/_form.html.erb
+++ b/app/views/portfolio/admin/site_item_categories/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for([:admin, @admin_site_item_category]) do |f| %>
-  <%= render 'portfolio/shared/form_errors', record: @admin_site_item_category %>
+<%= form_for([:admin, @categ]) do |f| %>
+  <%= render 'portfolio/shared/form_errors', record: @categ %>
       
   <div class="form-group">
     <%= f.label :name %><br>
