--- a/app/views/portfolio/admin/site_item_categories/index.html.erb
+++ b/app/views/portfolio/admin/site_item_categories/index.html.erb
@@ -10,12 +10,17 @@
   </thead>
 
   <tbody>
-    <% @admin_site_item_categories.each do |admin_site_item_category| %>
+    <% @categories.each do |admin_site_item_category| %>
       <tr>
         <td><%= admin_site_item_category.name %></td>
         <td><%= admin_site_item_category.key %></td>
-        <td><%= link_to 'Edit', edit_admin_site_item_category_path(admin_site_item_category) %></td>
-        <td><%= link_to 'Destroy', [:admin, admin_site_item_category], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Edit', [:edit, :admin, admin_site_item_category] %>
+        </td>
+        <td>
+          <%= link_to 'Destroy', [:admin, admin_site_item_category],
+                      method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -23,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Site item category', new_admin_site_item_category_path, class: 'btn btn-primary' %>
+<%= link_to 'New Site item category',
+    new_admin_site_item_category_path, class: 'btn btn-primary' %>
