--- a/app/views/portfolio/admin/site_items/index.html.erb
+++ b/app/views/portfolio/admin/site_items/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Url</th>
       <th>Images</th>
+      <th>Tags</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= item.title %></td>
         <td><%= item.url %></td>
         <td><%= item.site_item_images.count %></td>
+        <td><%= item.site_item_tags.count %></td>
         <td><%= link_to 'Show', item_path(item) %></td>
         <td><%= link_to 'Edit', [:edit, :admin, @site, item] %></td>
         <td><%= link_to 'Destroy', [:admin, @site, item], method: :delete, data: { confirm: 'Are you sure?' } %></td>
