--- a/app/views/portfolio/site_projects/show.html.erb
+++ b/app/views/portfolio/site_projects/show.html.erb
@@ -24,7 +24,7 @@
       <% end %>
     </div>
     
-    <a href="<%= @item.url %>" class="btn btn-default go_to_site">
+    <a href="<%= @item.url %>" class="btn btn-default go_to_site" target="_blank">
       Go to site
       <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
     </a>
