--- a/app/views/portfolio/site_projects/show.html.erb
+++ b/app/views/portfolio/site_projects/show.html.erb
@@ -15,7 +15,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-5 col-md-3">
     <div class="project_description">
-      <%= @item.body %>
+      <%= raw render_markdown @item.body %>
     </div>
     
     <div class="project_tags">
