--- a/app/views/portfolio/admin/site_items/_form.html.erb
+++ b/app/views/portfolio/admin/site_items/_form.html.erb
@@ -52,13 +52,29 @@
     </div>
   </div>
   
-  <div class="form-group">
-    <div class="checkbox">
-      <label>
-        <br>
-        <%= f.check_box :featured %>
-        Featured
-      </label>
+  <div class="row">
+    <div class="col-xs-12 col-md-1">
+      <div class="form-group">
+        <div class="checkbox">
+          <label>
+            <br>
+            <%= f.check_box :public %>
+            Published
+          </label>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-xs-12 col-md-11">
+      <div class="form-group">
+        <div class="checkbox">
+          <label>
+            <br>
+            <%= f.check_box :featured %>
+            Featured
+          </label>
+        </div>
+      </div>
     </div>
   </div>
   
