--- a/app/views/portfolio/shared/_admin_header.html.erb
+++ b/app/views/portfolio/shared/_admin_header.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to 'Portfolios', [:admin, :sites] %></li>
+        <li class="active"><%= link_to 'Sites', [:admin, :sites] %></li>
         <li><%= link_to 'Social Links', [:admin, :social_links] %></li>
         <li><%= link_to 'Sign out', destroy_admin_user_session_path, method: :delete %></li>
       </ul>
