--- a/app/views/portfolio/site_projects/_list.html.erb
+++ b/app/views/portfolio/site_projects/_list.html.erb
@@ -1,7 +1,7 @@
 <div class="container portfolio_projects">
   <h2>Projects</h2>
   
-  <% site.site_projects.featured.each do |project| %>
+  <% projects.each do |project| %>
     <div class="col-md-4 col-xs-6">
       <div class="project_container">
         <%= link_to image_tag(project.default_image.image(:thumb)), item_path(project) %>
