fix error when project doesn't have a category

--- a/app/views/portfolio/admin/site_items/_form.html.erb
+++ b/app/views/portfolio/admin/site_items/_form.html.erb
@@ -21,7 +21,7 @@
         <%= f.label :site_item_category_id %>
         <%= f.select :site_item_category_id, 
             Portfolio::SiteItemCategory.all.map { |c| [c.name, c.id] },
-            {}, class: 'form-control'%>
+            { include_blank: true }, class: 'form-control'%>
       </div>
     </div>
     
