--- a/app/views/portfolio/admin/site_items/index.html.erb
+++ b/app/views/portfolio/admin/site_items/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= item.public ? 'Yes' : 'No' %></td>
         <td><%= item.featured ? 'Yes' : 'No' %></td>
-        <td><%= item.site_item_category.name %></td>
+        <td><%= item.site_item_category ? item.site_item_category.name : '-' %></td>
         <td><%= item.title %></td>
         <td><%= item.url %></td>
         <td><%= item.site_item_images.count %></td>
