--- a/app/views/portfolio/site_projects/show.html.erb
+++ b/app/views/portfolio/site_projects/show.html.erb
@@ -24,16 +24,18 @@
       <% end %>
     </div>
     
+    <% if !@item.url.blank? %>
     <a href="<%= @item.url %>" class="btn btn-default go_to_site" target="_blank">
       Go to site
       <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
     </a>
+    <% end %>
     
     <%= link_to 'Edit', [:edit, :admin, @site, @item] if admin_user_signed_in? %>
   </div>
   <div class="col-xs-12 col-sm-7 col-md-9">
     <div class="main_image text-center">
-      <%= image_tag @default_image.image(:large), class: 'img-responsive' %>
+      <%= image_tag @default_image.image(:large), class: 'img-responsive' if @default_image %>
     </div>
     <% if @item.site_item_images.count > 1 %>
     
