--- a/app/views/portfolio/site_projects/index.html.erb
+++ b/app/views/portfolio/site_projects/index.html.erb
@@ -29,6 +29,6 @@
     <% end %>
     
     <%= render partial: 'projects_group', 
-        locals: { title: 'Others', projects: @site.site_projects.uncategorized } %>
+        locals: { title: 'Others', projects: @site.site_projects.published.uncategorized } %>
   <% end %>
 </div>
