--- a/app/assets/stylesheets/portfolio/site_projects.scss
+++ b/app/assets/stylesheets/portfolio/site_projects.scss
@@ -5,7 +5,10 @@
     margin: 15px 0 20px 0;
     
     .label {
-      margin-right: 5px;
+      margin-right: 3px;
+      margin-bottom: 4px;
+      display: inline-block;
+      padding: 5px;
     }
   }
 }
