change label projects to portfolio

--- a/app/views/portfolio/site_projects/_list.html.erb
+++ b/app/views/portfolio/site_projects/_list.html.erb
@@ -1,5 +1,5 @@
 <div class="container portfolio_projects">
-  <h2>Projects</h2>
+  <h2>Portfolio</h2>
   
   <% projects.each do |project| %>
     <div class="col-md-4 col-xs-6">
