--- a/app/views/portfolio/shared/_header_menu.html.erb
+++ b/app/views/portfolio/shared/_header_menu.html.erb
@@ -4,7 +4,7 @@
   
   <% Portfolio::SiteItem.subclasses.each do |klass| %>
     <% if klass.where(site: @site).published.count > 0 %>
-      <% name = klass.type_name.pluralize %>
+      <% name = klass.human_name.pluralize %>
       <%= link_to klass.display_name || name.humanize, send("portfolio_#{name}_path", @site.key) %>
     <% end %>
   <% end %>
