--- a/app/views/portfolio/shared/_header.html.erb
+++ b/app/views/portfolio/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="top_title">
   <%= link_to image_tag(@site.avatar.url(:thumb), class: :pf_avatar), show_portfolio_path(@site.key) if @site.avatar.file? %>
   <span class="title">
-    <%= link_to @site.person_name, show_portfolio_path(@site.key) %>
+    <%= link_to @site.person_name, portfolio.show_portfolio_path(@site.key) %>
   </span>
 </div>
 <%= render 'portfolio/shared/header_menu' %>
