added portfolio/sites/show view spec

--- a/app/views/portfolio/site_projects/_list.html.erb
+++ b/app/views/portfolio/site_projects/_list.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 
   <div class="clearfix"></div>
-  <%= link_to 'See full portfolio', portfolio_projects_path(@site.key) %>
+  <%= link_to 'See full portfolio', portfolio.portfolio_projects_path(@site.key) %>
 </div>
 
 <hr>
