--- a/app/views/portfolio/sites/show.html.erb
+++ b/app/views/portfolio/sites/show.html.erb
@@ -14,18 +14,20 @@
 
   <%= render 'portfolio/site_projects/list', projects: @featured_projects if @featured_projects.any? %>
 
+  <% unless @site.email.blank? %>
   <div class="pf_contact">
     <%= link_to 'Email me', "mailto:#{@site.email}", target: :_blank, class: 'btn btn-default' %>
   </div>
+  <% end %>
 
   <div class="pf_social_links">
     <% @site.site_social_links.each do |link| %>
-    <%= link_to image_tag(link.social_link.image(:medium)), link.url, 
-        title: link.social_link.name, target: :_blank, 
+    <%= link_to image_tag(link.social_link.image(:medium)), link.url,
+        title: link.social_link.name, target: :_blank,
         data: {toggle: 'tooltip', placement: 'top'} %>
     <% end %>
   </div>
-  
+
   <% if admin_user_signed_in? and not params[:preview] %>
     <%= link_to 'Edit', [:edit, :admin, @site] %> |
     <%= link_to 'Back', [:admin, :sites] %>
